update product template

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,3 +1,4 @@
+
 <style>
   .product__description{
     font-size: 14px;
@@ -62,7 +63,7 @@
     width: auto !important;
   }
 
-  slider-component#GalleryViewer-template--15891589923007__main {
+  slider-component#GalleryViewer-{{section.id}} {
     width: 82%;
   }
 
